3.1.0 2013-??-??
ChangeLog
========
 * disassembler: fixes crash with nested sandbox
 * adds support for PHP_5_5
 * compatible with fcntl fork

3.0.3 2013-16.18
========
 * clean files in release (fix htdocs config)

3.0.2 2013-06-10
ChangeLog
========
 * fixes #303: tablesort.js not found in Diagnosis and Coverager
 * fixes #297: segv on startup under sparc, ini setting overflow
 * fixes #296: (PHP5.4+ only bug), racecondition Multiple instances of the same software causes PHP "cannot redeclare class" errors when readonly_protection is not in use
 * fixes #301: refix locking impl
 * fixes #307: compatible with Zend Debugger which requires to be installed after Zend Extension Manager

3.0.1 2013-01-11
ChangeLog
========
 * fixes crash when cache is too small on start up
 * fixes #295: crash using traits with PHP 5.4.8+
 * fixes #290: workaround phpize vs fbsd make bug again
 * improve compatibility with "the ionCube PHP Loader", Zend Optimizer
 * fix random crash when cache is reinitialized yet failed (Thanks to Brad Baker for generating crash dump)
 * fix locking impl: improve stability on threaded env (Thanks to Mircea Nicolae for reproducing the bug)
 * diagnosis: undefined variable when ini is not found
 * PHP_5_4 optimizer: fix ZEND_JMP_SET_VAR
 * PHP_5_4 optimizer: fix for goto

3.0.0 2012-10-29
API Changes
========
 * chg: proto array xcache_clear_cache(int type, [ int id = -1 ]). -1 means all cache splits
 * new: proto array xcache_enable_cache(int type, [ int id = -1, [ bool enable = true ] ])
 * new: proto array xcache_admin_namespace()
 * new: proto array xcache_set_namespace(string namespace)

Ini Settings Changes
========
 * new: xcache.disable_on_crash = Off
 * new: xcache.coverager_autostart = On
 * new: xcache.allocator = bestfit (no other option value yet)
 * new: xcache.var_allocator = bestfit (no other option value yet)
 * new: xcache.var_namespace_mode = 0
 * new: xcache.var_namespace = ""

ChangeLog
========